--- a/locales/bg-BG.json
+++ b/locales/bg-BG.json
@@ -7,7 +7,7 @@
       "login_form_password_placeholder": "Вашата парола",
       "login_form_error": "Неправилна парола.",
       "login_form_submit": "Въведете",
-      "admin_link_html": "Вие ли сте собственикът на магазина? <a href=\"\/admin\" class=\"link underlined-link\">Влезте тук<\/a>",
+      "admin_link_html": "Вие ли сте собственикът на магазина? <a href=\"/admin\" class=\"link underlined-link\">Влезте тук</a>",
       "powered_by_shopify_html": "Този магазин ще се поддържа от {{ shopify }}"
     },
     "social": {
@@ -139,8 +139,8 @@
         "view_store_info": "Вижте информация за магазина",
         "check_other_stores": "Проверка за наличност в други магазини",
         "pick_up_available": "Възможност за взимане",
-        "pick_up_available_at_html": "Възможност за взимане от <span class=\"color-foreground\">{{ location_name }}<\/span>",
-        "pick_up_unavailable_at_html": "В момента няма възможност за взимане от <span class=\"color-foreground\">{{ location_name }}<\/span>",
+        "pick_up_available_at_html": "Възможност за взимане от <span class=\"color-foreground\">{{ location_name }}</span>",
+        "pick_up_unavailable_at_html": "В момента няма възможност за взимане от <span class=\"color-foreground\">{{ location_name }}</span>",
         "unavailable": "Не може да се зареди възможността за взимане",
         "refresh": "Обнови"
       },
@@ -156,7 +156,7 @@
       },
       "view_full_details": "Покажи пълните подробности",
       "include_taxes": "С включени данъци.",
-      "shipping_policy_html": "<a href=\"{{ link }}\">Доставката<\/a> се изчислява при плащане.",
+      "shipping_policy_html": "<a href=\"{{ link }}\">Доставката</a> се изчислява при плащане.",
       "choose_options": "Изберете опции",
       "choose_product_options": "Изберете опции за {{ product_name }}",
       "value_unavailable": "{{ option_value }} – неналично",
@@ -317,7 +317,7 @@
     "collection_template": {
       "title": "Колекция",
       "empty": "Не са открити продукти",
-      "use_fewer_filters_html": "Използвайте по-малко филтри или <a class=\"{{ class }}\" href=\"{{ link }}\">премахнете всички<\/a>"
+      "use_fewer_filters_html": "Използвайте по-малко филтри или <a class=\"{{ class }}\" href=\"{{ link }}\">премахнете всички</a>"
     },
     "video": {
       "load_video": "Зареждане на видео: {{ description }}"
@@ -368,7 +368,7 @@
     }
   },
   "localization": {
-    "country_label": "Държава\/регион",
+    "country_label": "Държава/регион",
     "language_label": "Език",
     "update_language": "Актуализиране на езика",
     "update_country": "Актуализиране на държава/регион",
@@ -393,7 +393,7 @@
       "address1": "Адрес 1",
       "address2": "Адрес 2",
       "city": "Град",
-      "country": "Държава\/регион",
+      "country": "Държава/регион",
       "province": "Провинция",
       "phone": "Телефон",
       "set_default": "Задаване като адрес по подразбиране",
