--- a/locales/hu.json
+++ b/locales/hu.json
@@ -7,7 +7,7 @@
       "login_form_password_placeholder": "Saját jelszó",
       "login_form_error": "Téves jelszót írtál be.",
       "login_form_submit": "Belépés",
-      "admin_link_html": "Te vagy a webáruház tulajdonosa? <a href=\"\/admin\" class=\"link underlined-link\">Itt tudsz bejelentkezni<\/a>",
+      "admin_link_html": "Te vagy a webáruház tulajdonosa? <a href=\"/admin\" class=\"link underlined-link\">Itt tudsz bejelentkezni</a>",
       "powered_by_shopify_html": "A bolt szolgáltatója a {{ shopify }}"
     },
     "social": {
@@ -51,7 +51,7 @@
       "close": "Megosztás befejezése"
     },
     "slider": {
-      "of": "\/",
+      "of": "/",
       "next_slide": "Következő dia",
       "previous_slide": "Előző dia",
       "name": "Csúszka"
@@ -65,7 +65,7 @@
   "accessibility": {
     "skip_to_text": "Ugrás a tartalomhoz",
     "close": "Bezárás",
-    "unit_price_separator": "\/",
+    "unit_price_separator": "/",
     "vendor": "Forgalmazó:",
     "error": "Hiba",
     "refresh_page": "Ha kiválasztasz egy lehetőséget, a teljes oldal frissül.",
@@ -76,7 +76,7 @@
     "loading": "Betöltés folyamatban…",
     "skip_to_product_info": "Kihagyás, és ugrás a termékadatokra",
     "total_reviews": "összes értékelés",
-    "star_reviews_info": "{{ rating_max }}\/{{ rating_value }} csillag",
+    "star_reviews_info": "{{ rating_max }}/{{ rating_value }} csillag",
     "collapsible_content_title": "Összecsukható tartalom",
     "complementary_products": "Kiegészítő termékek"
   },
@@ -140,8 +140,8 @@
         "view_store_info": "Webáruház adatai",
         "check_other_stores": "Kapható más webáruházakban?",
         "pick_up_available": "Személyesen átvehető",
-        "pick_up_available_at_html": "Személyesen átvehető itt: <span class=\"color-foreground\">{{ location_name }}<\/span>",
-        "pick_up_unavailable_at_html": "Személyesen egyelőre nem vehető át itt: <span class=\"color-foreground\">{{ location_name }}<\/span>",
+        "pick_up_available_at_html": "Személyesen átvehető itt: <span class=\"color-foreground\">{{ location_name }}</span>",
+        "pick_up_unavailable_at_html": "Személyesen egyelőre nem vehető át itt: <span class=\"color-foreground\">{{ location_name }}</span>",
         "unavailable": "Nem sikerült betölteni az átvehetőségi adatokat",
         "refresh": "Frissítés"
       },
@@ -157,7 +157,7 @@
       },
       "view_full_details": "Minden részlet megtekintése",
       "include_taxes": "Tartalmazza az adót.",
-      "shipping_policy_html": "A <a href=\"{{ link }}\">szállítási költséget<\/a> a megrendeléskor számítjuk ki.",
+      "shipping_policy_html": "A <a href=\"{{ link }}\">szállítási költséget</a> a megrendeléskor számítjuk ki.",
       "choose_options": "Válassz a lehetőségek közül",
       "choose_product_options": "Termékváltozatok – {{ product_name }}",
       "value_unavailable": "{{ option_value }} – Nincs készleten",
@@ -194,8 +194,8 @@
       },
       "max_price": "A legmagasabb ár {{ price }}",
       "product_count": {
-        "one": "{{ count }}\/{{ product_count }} termék",
-        "other": "{{ count }}\/{{ product_count }} termék"
+        "one": "{{ count }}/{{ product_count }} termék",
+        "other": "{{ count }}/{{ product_count }} termék"
       },
       "product_count_simple": {
         "one": "{{ count }} termék",
@@ -317,7 +317,7 @@
     "collection_template": {
       "title": "Kollekció",
       "empty": "Nincs találat",
-      "use_fewer_filters_html": "Használj kevesebb szűrőt, vagy <a class=\"{{ class }}\" href=\"{{ link }}\">távolítsd el az összeset<\/a>."
+      "use_fewer_filters_html": "Használj kevesebb szűrőt, vagy <a class=\"{{ class }}\" href=\"{{ link }}\">távolítsd el az összeset</a>."
     },
     "video": {
       "load_video": "Videó betöltése: {{ description }}"
@@ -368,7 +368,7 @@
     }
   },
   "localization": {
-    "country_label": "Ország\/régió",
+    "country_label": "Ország/régió",
     "language_label": "Nyelv",
     "update_language": "Nyelv módosítása",
     "update_country": "Ország/régió frissítése",
@@ -403,7 +403,7 @@
       "address1": "1. cím",
       "address2": "2. cím",
       "city": "Település",
-      "country": "Ország\/régió",
+      "country": "Ország/régió",
       "province": "Megye",
       "zip": "Irányítószám",
       "phone": "Telefonszám",
