--- a/locales/ko.json
+++ b/locales/ko.json
@@ -7,7 +7,7 @@
       "login_form_password_placeholder": "귀하의 비밀번호",
       "login_form_error": "잘못된 비밀번호입니다!",
       "login_form_submit": "입력",
-      "admin_link_html": "스토어 소유자입니까? <a href=\"\/admin\" class=\"link underlined-link\">여기에서 로그인<\/a>",
+      "admin_link_html": "스토어 소유자입니까? <a href=\"/admin\" class=\"link underlined-link\">여기에서 로그인</a>",
       "powered_by_shopify_html": "이 상점은 {{ shopify }}에서 제공합니다."
     },
     "social": {
@@ -76,7 +76,7 @@
     "loading": "로드하는 중...",
     "skip_to_product_info": "제품 정보로 건너뛰기",
     "total_reviews": "총 리뷰",
-    "star_reviews_info": "별점: {{ rating_value }}\/{{ rating_max }}",
+    "star_reviews_info": "별점: {{ rating_value }}/{{ rating_max }}",
     "collapsible_content_title": "축소 가능한 콘텐츠",
     "complementary_products": "보완 제품"
   },
@@ -140,8 +140,8 @@
         "view_store_info": "스토어 정보 보기",
         "check_other_stores": "다른 스토어의 사용 가능 여부 확인",
         "pick_up_available": "픽업 사용 가능",
-        "pick_up_available_at_html": "<span class=\"color-foreground\">{{ location_name }}<\/span>에서 픽업 사용 가능",
-        "pick_up_unavailable_at_html": "<span class=\"color-foreground\">{{ location_name }}<\/span>에서 현재 픽업 사용 불가",
+        "pick_up_available_at_html": "<span class=\"color-foreground\">{{ location_name }}</span>에서 픽업 사용 가능",
+        "pick_up_unavailable_at_html": "<span class=\"color-foreground\">{{ location_name }}</span>에서 현재 픽업 사용 불가",
         "unavailable": "픽업 사용 가능 여부를 로드할 수 없습니다.",
         "refresh": "새로 고침"
       },
@@ -157,7 +157,7 @@
       },
       "view_full_details": "전체 세부 정보 보기",
       "include_taxes": "세금이 포함됩니다.",
-      "shipping_policy_html": "<a href=\"{{ link }}\">배송료<\/a>는 결제 시 계산됩니다.",
+      "shipping_policy_html": "<a href=\"{{ link }}\">배송료</a>는 결제 시 계산됩니다.",
       "choose_options": "옵션 선택하기",
       "choose_product_options": "{{ product_name }}의 옵션 선택",
       "value_unavailable": "{{ option_value }} - 사용할 수 없음",
@@ -194,8 +194,8 @@
       },
       "max_price": "최고가는 {{ price }}입니다.",
       "product_count": {
-        "one": "{{ product_count }}\/{{ count }}개 제품",
-        "other": "{{ product_count }}\/{{ count }}개 제품"
+        "one": "{{ product_count }}/{{ count }}개 제품",
+        "other": "{{ product_count }}/{{ count }}개 제품"
       },
       "product_count_simple": {
         "one": "{{ count }}개 제품",
@@ -214,7 +214,7 @@
   },
   "templates": {
     "search": {
-      "no_results": "\"{{ terms }}\"에 대한 검색 결과가 없습니다. 철자를 확인하거나 다른 단어\/문구를 사용해 보십시오.",
+      "no_results": "\"{{ terms }}\"에 대한 검색 결과가 없습니다. 철자를 확인하거나 다른 단어/문구를 사용해 보십시오.",
       "results_with_count": {
         "one": "{{ count }}개 결과",
         "other": "{{ count }}개 결과"
@@ -317,7 +317,7 @@
     "collection_template": {
       "title": "컬렉션",
       "empty": "제품을 찾을 수 없음",
-      "use_fewer_filters_html": "더 적은 수의 필터를 사용하거나 <a class=\"{{ class }}\" href=\"{{ link }}\">모두 제거하기<\/a>"
+      "use_fewer_filters_html": "더 적은 수의 필터를 사용하거나 <a class=\"{{ class }}\" href=\"{{ link }}\">모두 제거하기</a>"
     },
     "video": {
       "load_video": "동영상 로드: {{ description }}"
@@ -368,7 +368,7 @@
     }
   },
   "localization": {
-    "country_label": "국가\/지역",
+    "country_label": "국가/지역",
     "language_label": "언어",
     "update_language": "언어 업데이트",
     "update_country": "국가/지역 업데이트",
@@ -402,9 +402,9 @@
       "company": "회사",
       "address1": "주소 1",
       "address2": "주소 2",
-      "city": "구\/군\/시",
-      "country": "국가\/지역",
-      "province": "시\/도",
+      "city": "구/군/시",
+      "country": "국가/지역",
+      "province": "시/도",
       "zip": "우편 번호",
       "phone": "전화",
       "set_default": "기본 주소로 설정",
