--- a/locales/pt-PT.json
+++ b/locales/pt-PT.json
@@ -7,7 +7,7 @@
       "login_form_password_placeholder": "A sua palavra-passe",
       "login_form_error": "Palavra-passe errada!",
       "login_form_submit": "Entrar",
-      "admin_link_html": "É o proprietário da loja? <a href=\"\/admin\" class=\"link underlined-link\">Inicie a sessão aqui<\/a>",
+      "admin_link_html": "É o proprietário da loja? <a href=\"/admin\" class=\"link underlined-link\">Inicie a sessão aqui</a>",
       "powered_by_shopify_html": "Esta loja irá contar com tecnologia {{ shopify }}"
     },
     "social": {
@@ -141,8 +141,8 @@
         "view_store_info": "Ver informações da loja",
         "check_other_stores": "Verificar a disponibilidade noutras lojas",
         "pick_up_available": "Recolha disponível",
-        "pick_up_available_at_html": "Recolha disponível em <span class=\"color-foreground\">{{ location_name }}<\/span>",
-        "pick_up_unavailable_at_html": "Recolha atualmente indisponível em <span class=\"color-foreground\">{{ location_name }}<\/span>",
+        "pick_up_available_at_html": "Recolha disponível em <span class=\"color-foreground\">{{ location_name }}</span>",
+        "pick_up_unavailable_at_html": "Recolha atualmente indisponível em <span class=\"color-foreground\">{{ location_name }}</span>",
         "unavailable": "Não foi possível carregar a disponibilidade de recolha",
         "refresh": "Atualizar"
       },
@@ -158,7 +158,7 @@
       },
       "view_full_details": "Ver detalhes completos",
       "include_taxes": "Imposto incluído.",
-      "shipping_policy_html": "<a href=\"{{ link }}\">Envio<\/a> calculado na finalização da compra.",
+      "shipping_policy_html": "<a href=\"{{ link }}\">Envio</a> calculado na finalização da compra.",
       "choose_options": "Escolher opções",
       "choose_product_options": "Escolha opções para {{ product_name }}",
       "value_unavailable": "{{ option_value }} - Indisponível",
@@ -327,7 +327,7 @@
     "collection_template": {
       "title": "Coleção",
       "empty": "Nenhum produto encontrado",
-      "use_fewer_filters_html": "Utilizar menos filtros ou <a class=\"{{ class }}\" href=\"{{ link }}\">remover tudo<\/a>"
+      "use_fewer_filters_html": "Utilizar menos filtros ou <a class=\"{{ class }}\" href=\"{{ link }}\">remover tudo</a>"
     },
     "video": {
       "load_video": "Carregar vídeo: {{ description }}"
@@ -380,7 +380,7 @@
     }
   },
   "localization": {
-    "country_label": "País\/região",
+    "country_label": "País/região",
     "language_label": "Idioma",
     "update_language": "Atualizar idioma",
     "update_country": "Atualizar país/região",
@@ -415,7 +415,7 @@
       "address1": "Endereço1",
       "address2": "Endereço 2",
       "city": "Localidade",
-      "country": "País\/região",
+      "country": "País/região",
       "province": "Província",
       "zip": "Código postal",
       "phone": "Telefone",
