--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -289,6 +289,7 @@
       "new_estimated_total": "New estimated total",
       "note": "Order special instructions",
       "checkout": "Checkout",
+      "continue_shopping": "Continue shopping",
       "empty": "Your shopping cart is empty",
       "cart_error": "There was an error while updating your cart. Please try again.",
       "cart_quantity_error_html": "You can only add {{ quantity }} of this item to your cart.",
